Home:create the ui of sorting, Login:navigate to home page after submit, AABBooksInput:update the hide password icon, Navbar:fix the navigate links, BookCard:use simple dropdown to fix the antd dropdown overlapping issue, Create the useComponentVisible for simple dropdown to hnadle the usecase of close the dropdown when clicked anywhere the dropdown

--- a/src/renderer/components/Home/Home.css
+++ b/src/renderer/components/Home/Home.css
@@ -28,3 +28,20 @@
     padding: 0 50px;
     justify-content: space-between;
 }
+
+.booksHeadingContainer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.sortDiv {
+    margin-right: 50px;
+}
+
+.sortDropdown {
+    display: flex;
+    align-items: end;
+    justify-content: space-evenly;
+
+}
